; ModuleID = '/home/carl/AnghaBench/linux/drivers/hid/intel-ish-hid/ipc/extr_ipc.c_ish_reg_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hid/intel-ish-hid/ipc/extr_ipc.c_ish_reg_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ishtp_device = type { i32 }
%struct.ish_hw = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ishtp_device*, i64)* @ish_reg_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ish_reg_read(%struct.ishtp_device* %0, i64 %1) #0 {
  %3 = alloca %struct.ishtp_device*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.ish_hw*, align 8
  store %struct.ishtp_device* %0, %struct.ishtp_device** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.ishtp_device*, %struct.ishtp_device** %3, align 8
  %7 = call %struct.ish_hw* @to_ish_hw(%struct.ishtp_device* %6)
  store %struct.ish_hw* %7, %struct.ish_hw** %5, align 8
  %8 = load %struct.ish_hw*, %struct.ish_hw** %5, align 8
  %9 = getelementptr inbounds %struct.ish_hw, %struct.ish_hw* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* %4, align 8
  %12 = add i64 %10, %11
  %13 = call i32 @readl(i64 %12)
  ret i32 %13
}

declare dso_local %struct.ish_hw* @to_ish_hw(%struct.ishtp_device*) #1

declare dso_local i32 @readl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
